--- a/frontend/playtalk_app/pubspec.yaml
+++ b/frontend/playtalk_app/pubspec.yaml
@@ -10,10 +10,12 @@ dependencies:
 
   firebase_core: ^2.30.0
   firebase_database: ^10.5.0
+  cupertino_icons: ^1.0.2
 
   flutter_bloc: ^8.1.6
   equatable: ^2.0.5
   http: ^1.2.2
+  dio: ^5.9.0
 
 
 dev_dependencies:
@@ -21,17 +23,4 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^3.0.0
 flutter:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+   uses-material-design: true
